Reduce memory footprint of InodeLockList
Although the Entry abstraction in SimpleInodeLockList makes code more
readable, but it unnecessarily stores extra representations of Edges,
each consumes a long and a String. Since Each FileSystemMaster operation
will create at least one InodeLockList, the lower memory consumption the
better.

This PR removes the Entry abstraction without sacrificing readability
too much.

pr-link: Alluxio/alluxio#9092
change-id: cid-d141521a69ddefdf00411d79caeaecf4290aed96